@@ -3755,7 +3755,7 @@ parameter_list|)
 block|{
 try|try
 block|{
-if|if
+switch|switch
 condition|(
 name|te
 operator|.
@@ -3763,26 +3763,50 @@ name|seekCeil
 argument_list|(
 name|key
 argument_list|)
-operator|==
-name|SeekStatus
-operator|.
-name|FOUND
 condition|)
 block|{
+case|case
+name|FOUND
+case|:
+assert|assert
+name|te
+operator|.
+name|ord
+argument_list|()
+operator|>=
+literal|0
+assert|;
 return|return
 name|te
 operator|.
 name|ord
 argument_list|()
 return|;
-block|}
-else|else
-block|{
+case|case
+name|NOT_FOUND
+case|:
+assert|assert
+name|te
+operator|.
+name|ord
+argument_list|()
+operator|>=
+literal|0
+assert|;
 return|return
 operator|-
 name|te
 operator|.
 name|ord
+argument_list|()
+operator|-
+literal|1
+return|;
+default|default:
+comment|/* END */
+return|return
+operator|-
+name|numTerms
 argument_list|()
 operator|-
 literal|1
