@@ -4279,6 +4279,123 @@ name|ord
 argument_list|()
 argument_list|)
 expr_stmt|;
+comment|// lookupTerm(BytesRef)
+name|assertEquals
+argument_list|(
+operator|-
+literal|1
+argument_list|,
+name|dv
+operator|.
+name|lookupTerm
+argument_list|(
+operator|new
+name|BytesRef
+argument_list|(
+literal|"apple"
+argument_list|)
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|0
+argument_list|,
+name|dv
+operator|.
+name|lookupTerm
+argument_list|(
+operator|new
+name|BytesRef
+argument_list|(
+literal|"beer"
+argument_list|)
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+operator|-
+literal|2
+argument_list|,
+name|dv
+operator|.
+name|lookupTerm
+argument_list|(
+operator|new
+name|BytesRef
+argument_list|(
+literal|"car"
+argument_list|)
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|1
+argument_list|,
+name|dv
+operator|.
+name|lookupTerm
+argument_list|(
+operator|new
+name|BytesRef
+argument_list|(
+literal|"hello"
+argument_list|)
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+operator|-
+literal|3
+argument_list|,
+name|dv
+operator|.
+name|lookupTerm
+argument_list|(
+operator|new
+name|BytesRef
+argument_list|(
+literal|"matter"
+argument_list|)
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|2
+argument_list|,
+name|dv
+operator|.
+name|lookupTerm
+argument_list|(
+operator|new
+name|BytesRef
+argument_list|(
+literal|"world"
+argument_list|)
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+operator|-
+literal|4
+argument_list|,
+name|dv
+operator|.
+name|lookupTerm
+argument_list|(
+operator|new
+name|BytesRef
+argument_list|(
+literal|"zany"
+argument_list|)
+argument_list|)
+argument_list|)
+expr_stmt|;
 name|ireader
 operator|.
 name|close
